<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:padding="12dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="logo"
                android:src="@drawable/ic_logo" />

        </androidx.appcompat.widget.Toolbar>

        <HorizontalScrollView
            android:overScrollMode="never"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.chip.Chip
                    android:id="@+id/home_chip_all"
                    android:layout_marginStart="12dp"
                    style="@style/Style.Eventme.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_chip_all"
                    android:tag="all"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/home_chip_music"
                    style="@style/Style.Eventme.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_chip_music"
                    android:tag="music"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/home_chip_art"
                    style="@style/Style.Eventme.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_chip_art"
                    android:tag="art"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/home_chip_cultural"
                    style="@style/Style.Eventme.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_chip_cultural"
                    android:tag="cultural"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/home_chip_sport"
                    style="@style/Style.Eventme.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_chip_sport"
                    android:tag="sport"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/home_chip_science"
                    style="@style/Style.Eventme.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_chip_science"
                    android:tag="science"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/home_chip_technology"
                    style="@style/Style.Eventme.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_chip_technology"
                    android:tag="technology"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/home_chip_food"
                    style="@style/Style.Eventme.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_chip_food"
                    android:tag="food"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/home_chip_fashion"
                    style="@style/Style.Eventme.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_chip_fashion"
                    android:tag="fashion"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/home_chip_politics"
                    style="@style/Style.Eventme.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_chip_politics"
                    android:tag="politics"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/home_chip_education"
                    style="@style/Style.Eventme.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_chip_education"
                    android:tag="education"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/home_chip_travel"
                    style="@style/Style.Eventme.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_chip_travel"
                    android:tag="travel"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/home_chip_games"
                    style="@style/Style.Eventme.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_chip_games"
                    android:tag="games"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/home_chip_others"
                    android:layout_marginEnd="12dp"
                    style="@style/Style.Eventme.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_chip_others"
                    android:tag="others"/>

            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        style="@style/Widget.Design.BottomNavigationView"
        android:paddingBottom="@dimen/navigation_space">
        <TextView
            style="@style/Style.Eventme.Text.Header1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/home_title" />

        <androidx.viewpager2.widget.ViewPager2
            android:overScrollMode="never"
            android:id="@+id/home_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            />

        <LinearLayout
            android:id="@+id/home_no_events_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:visibility="gone">
            <TextView
                android:textSize="20sp"
                android:textColor="@color/font_color_darker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No events found"/>
        </LinearLayout>
    </LinearLayout>

    </LinearLayout>

</FrameLayout>